// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addNewMember happy path with only current month timetables calls reconciliateFn with the updated members list 1`] = `
Array [
  Array [
    Array [
      Object {
        "email": "",
        "entrada": "17:00",
        "id": "jeff",
        "lesiones": "",
        "nombre": "Jeff",
      },
      Object {
        "email": "",
        "entrada": "17:00",
        "id": "ben",
        "lesiones": "",
        "nombre": "Ben",
      },
      Object {
        "email": "",
        "entrada": "08:00",
        "id": "jenny",
        "lesiones": "",
        "nombre": "Jenny",
      },
    ],
  ],
]
`;

exports[`addNewMember happy path with only current month timetables calls reconciliateFn with the updated reservations list 1`] = `
Array [
  Array [
    Array [
      Object {
        "dia": "23-Lun",
        "hora": "18:00",
        "miembro": "jeff",
      },
      Object {
        "dia": "23-Lun",
        "hora": "18:00",
        "miembro": "ben",
      },
      Object {
        "dia": "25-Mié",
        "hora": "08:00",
        "miembro": "jenny",
      },
      Object {
        "dia": "26-Jue",
        "hora": "08:00",
        "miembro": "jenny",
      },
      Object {
        "dia": "27-Vie",
        "hora": "08:00",
        "miembro": "jenny",
      },
      Object {
        "dia": "28-Sáb",
        "hora": "08:00",
        "miembro": "jenny",
      },
      Object {
        "dia": "30-Lun",
        "hora": "08:00",
        "miembro": "jenny",
      },
    ],
  ],
]
`;

exports[`addNewMember happy path with two timetables calls reconciliateFn with the updated members list 1`] = `
Array [
  Array [
    Array [
      Object {
        "email": "",
        "entrada": "17:00",
        "id": "jeff",
        "lesiones": "",
        "nombre": "Jeff",
      },
      Object {
        "email": "",
        "entrada": "17:00",
        "id": "ben",
        "lesiones": "",
        "nombre": "Ben",
      },
      Object {
        "email": "",
        "entrada": "19:00",
        "id": "alex",
        "lesiones": "",
        "nombre": "Alex",
      },
    ],
  ],
]
`;

exports[`addNewMember happy path with two timetables calls reconciliateFn with the updated reservations list for each of the 2 sheets 1`] = `
Array [
  Array [
    Array [
      Object {
        "dia": "23-Lun",
        "hora": "18:00",
        "miembro": "jeff",
      },
      Object {
        "dia": "23-Lun",
        "hora": "18:00",
        "miembro": "ben",
      },
      Object {
        "dia": "25-Mié",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "26-Jue",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "27-Vie",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "28-Sáb",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "30-Lun",
        "hora": "19:00",
        "miembro": "alex",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "dia": "01-Mar",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "02-Mié",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "03-Jue",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "04-Vie",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "05-Sáb",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "07-Lun",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "08-Mar",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "09-Mié",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "10-Jue",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "11-Vie",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "12-Sáb",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "14-Lun",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "15-Mar",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "16-Mié",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "17-Jue",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "18-Vie",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "19-Sáb",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "21-Lun",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "22-Mar",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "23-Lun",
        "hora": "18:00",
        "miembro": "ben",
      },
      Object {
        "dia": "23-Lun",
        "hora": "18:00",
        "miembro": "jeff",
      },
      Object {
        "dia": "23-Mié",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "24-Jue",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "25-Vie",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "26-Sáb",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "28-Lun",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "29-Mar",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "30-Mié",
        "hora": "19:00",
        "miembro": "alex",
      },
      Object {
        "dia": "31-Jue",
        "hora": "19:00",
        "miembro": "alex",
      },
    ],
  ],
]
`;

exports[`changeReservationHourForADay when reservation already exists throws a readable error 1`] = `[FatalError: Este miembro ya reservó anteriormente para el día 23-Lun a las 18:00.]`;

exports[`changeReservationHourForADay when target hour is already full throws a readable error 1`] = `[FatalError: No se pueden agregar mas miembros para el día 25-Mié a las 17:00. Por favor busca otro horario.]`;

exports[`changeReservationHourForADay when timetable has not been created yet throws a readable error 1`] = `[FatalError: La hoja DIC-2020 no existe.]`;

exports[`createTimeTableSheet happy path without flags calls reconciliateFn with the full generated timetable 1`] = `
Array [
  Object {
    "dia": "01-Mar",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "01-Mar",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "01-Mar",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "02-Mié",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "02-Mié",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "02-Mié",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "03-Jue",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "03-Jue",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "03-Jue",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "04-Vie",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "04-Vie",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "04-Vie",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "05-Sáb",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "05-Sáb",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "05-Sáb",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "07-Lun",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "07-Lun",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "07-Lun",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "08-Mar",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "08-Mar",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "08-Mar",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "09-Mié",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "09-Mié",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "09-Mié",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "10-Jue",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "10-Jue",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "10-Jue",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "11-Vie",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "11-Vie",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "11-Vie",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "12-Sáb",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "12-Sáb",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "12-Sáb",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "14-Lun",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "14-Lun",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "14-Lun",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "15-Mar",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "15-Mar",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "15-Mar",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "16-Mié",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "16-Mié",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "16-Mié",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "17-Jue",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "17-Jue",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "17-Jue",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "18-Vie",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "18-Vie",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "18-Vie",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "19-Sáb",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "19-Sáb",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "19-Sáb",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "21-Lun",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "21-Lun",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "21-Lun",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "22-Mar",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "22-Mar",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "22-Mar",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "23-Mié",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "23-Mié",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "23-Mié",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "24-Jue",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "24-Jue",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "24-Jue",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "25-Vie",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "25-Vie",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "25-Vie",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "26-Sáb",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "26-Sáb",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "26-Sáb",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "28-Lun",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "28-Lun",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "28-Lun",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "29-Mar",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "29-Mar",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "29-Mar",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "30-Mié",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "30-Mié",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "30-Mié",
    "hora": "17:00",
    "miembro": "alex",
  },
  Object {
    "dia": "31-Jue",
    "hora": "17:00",
    "miembro": "jeff",
  },
  Object {
    "dia": "31-Jue",
    "hora": "17:00",
    "miembro": "ben",
  },
  Object {
    "dia": "31-Jue",
    "hora": "17:00",
    "miembro": "alex",
  },
]
`;

exports[`listMembersThatReservedAtTime happy path with empty arguments returns a readable message with member names 1`] = `
"Fecha: Lunes, 23 de Noviembre 18:00
Miembros:

Jeff
Ben

2 en total."
`;

exports[`removeMember fails when member is not found 1`] = `[FatalError: No se encontró un miembro con ID: not_user.]`;
